scaffolder-templates/springboot-rest-template/skeleton/.gitlab/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP}
  namespace: ${NAMESPACE}
  labels:
    backstage.io/kubernetes-id: "${CI_PROJECT_PATH_SLUG}"  # Linking the deployment with Backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APP}
  template:
    metadata:
      labels:
        app: ${APP}
    spec:
      containers:
        - name: ${APP}
          image: ${DOCKER_IMAGE}
          ports:
            - containerPort: 8080
