scaffolder-templates/springboot-rest-template/skeleton/.gitlab/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${APP}
  namespace: ${NAMESPACE}
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: ${APP}
